// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Para Component should render correctly and match snapshot 1`] = `
.c0 {
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  font-weight: normal;
  font-size: 12px;
}

<Para
  className="c0"
  inheritedStyles=""
>
  This is Para text
</Para>
`;

exports[`Para Component should render with styles correctly and match snapshot 1`] = `
.c0 {
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  font-weight: normal;
  font-size: 12px;
}

<p
  className="c0"
>
  This is Para text
</p>
`;
